style: fix image crop overflowing when big image

--- a/sdks/js/packages/core/react/components/avatar-upload/avatar-upload.module.css
+++ b/sdks/js/packages/core/react/components/avatar-upload/avatar-upload.module.css
@@ -35,8 +35,8 @@
 
 .cropModal {
   padding: 0;
-  max-width: 400px;
-  max-height: 400px;
+  max-width: 600px;
+  max-height: fit-content;
   width: 100%;
   height: 100%;
   display: flex;
